--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,22 +1,46 @@
-.App {
-  text-align: center;
+.add-appointment .card-body {
+  display: none;
 }
 
-.App-logo {
-  height: 40vmin;
+.apt-addheading {
+  cursor: pointer;
+  user-select: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.appointment-list {
+  font-size: 1.1em;
 }
 
-.App-link {
-  color: #09d3ac;
+.appointment-list .pet-item {
+  border-bottom: 1px dotted gray;
 }
+
+.appointment-list .pet-item:last-child {
+  border-bottom: none;
+}
+
+.appointment-list .pet-name {
+  font-weight: 600;
+  color: #337ab7;
+  font-size: 1.3em;
+  line-height: 100%;
+}
+
+.appointment-list .label-item {
+  font-weight: 600;
+  color: #667b82;
+}
+
+.appointment-list .apt-date {
+  font-style: italic;
+}
+
+.appointment-list .apt-notes {
+  line-height: 120%;
+}
+
+.dropdown-item.active,
+.dropdown-item:active {
+  background-color: #a9aeb2;
+}
+
